# slate

./: .env.example  .gitignore  README.md  SECURITY.md  compass_artifact_wf-8e178305-816b-4af3-b4c9-da389311d50e_text_markdown.md  components.json  electron-builder.yml  electron.vite.config.ts  eslint.config.js  index.html  package.contract.test.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  screenplay-app-architecture.md  tsconfig.json  untitled.fountain  vite.config.ts
.codex/environments/: environment.toml
.github/workflows/: release-desktop.yml
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: checklist-template.md  plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docs/: architecture.md  deployment.md  development.md  file-formats.md  getting-started.md  index.md  product-strategy.md  troubleshooting.md
engine/: alembic.ini  package_sidecar.py  pyproject.toml  sidecar_entry.py
engine/migrations/: env.py
engine/migrations/versions/: 0001_initial.py
engine/src/slate_engine/: __init__.py  analysis.py  comparison.py  database.py  models.py  normalization.py  rpc.py  service.py
engine/tests/: test_analysis.py  test_comparison.py  test_normalization.py  test_service.py
public/: manifest.json
schemas/: slate-document.schema.json
screenshots/: README.md
scripts/: install.sh
src/: App.tsx  main.tsx  router.test.tsx  router.tsx  slate-env.d.ts  styles.css
src-tauri/: Cargo.toml  README.md  tauri.conf.json
(+140 files in other folders)
